Update home template

--- a/static/templates/home.html
+++ b/static/templates/home.html
@@ -2,10 +2,19 @@
 <html>
 	<head>
 		<title>Smarter Voicemail</title>
-		<link rel="stylesheet"/>
-		<script src="assets/main.js"></script>
+		<link src="assets/css/main.css" rel="stylesheet"/>
 	</head>
 	<body>
-		
+		<h1>Welcome to smarter voicemail</h1>
+		<ul>
+			<li>Benefit number 1</li>
+			<li>Benefit number 2</li>
+			<li>Benefit number 3</li>
+			<li>Benefit number 4</li>
+			<li>Benefit number 5</li>
+		</ul>
+		<button>Signup</button>
+		<button>Login</button>
+		<script src="assets/javascripts/main.js"></script>
 	</body>
 </html>
