Design changes for CSS and Home

--- a/static/templates/home.html
+++ b/static/templates/home.html
@@ -2,19 +2,22 @@
 <html>
 	<head>
 		<title>Smarter Voicemail</title>
-		<link src="assets/css/main.css" rel="stylesheet"/>
+		<link href="../assets/css/override.css" rel="stylesheet"/>
+		<link href="../assets/css/app.css" rel="stylesheet"/>
 	</head>
 	<body>
-		<h1>Welcome to smarter voicemail</h1>
-		<ul>
-			<li>Benefit number 1</li>
-			<li>Benefit number 2</li>
-			<li>Benefit number 3</li>
-			<li>Benefit number 4</li>
-			<li>Benefit number 5</li>
-		</ul>
-		<button>Signup</button>
-		<button>Login</button>
+		<section>
+			<h1>Welcome to smarter voicemail</h1>
+			<ul>
+				<li>Benefit number 1</li>
+				<li>Benefit number 2</li>
+				<li>Benefit number 3</li>
+				<li>Benefit number 4</li>
+				<li>Benefit number 5</li>
+			</ul>
+			<button>Signup</button>
+			<button>Login</button>
+		</section>
 		<script src="assets/javascripts/main.js"></script>
 	</body>
 </html>
