--- a/static/assets/css/app.css
+++ b/static/assets/css/app.css
@@ -1,3 +1,65 @@
 body {
 	color: #303030;
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 16px;
+	line-height: 100%;
 }
+
+body > section {
+	padding: 20px;
+	margin: auto;
+	text-align: center;
+}
+
+/* Links */
+
+	a {
+
+	}
+	
+/* Buttons */
+
+		button {
+			border: none;
+			background: #6776d2;
+			color: #fff;
+			font-size: 20px;
+			font-weight: 300;
+			border-radius: 3px;
+			padding: 10px 15px;
+			cursor: pointer;
+		}
+		
+		button:hover,
+		button:focus {
+				background: #303030;
+		}
+
+/* Headings */
+
+	h1 {
+		text-align: center;
+		font-size: 30px;
+		line-height: 100%;
+		font-weight: 600;
+		margin: 0 0 30px 0;
+	}
+
+/* Lists */
+
+	ul {
+		
+	}
+
+	ul li {
+		list-style: disc;
+		margin: 10px 0 0 0;
+		padding: 0 0 0 20px;
+	}
+
+/* Lists */
+
+	form input[type=text],
+	form input[type=password] {
+		border: ;
+	}
