--- a/static/templates/signup.html
+++ b/static/templates/signup.html
@@ -2,17 +2,20 @@
 <html>
 	<head>
 		<title>Signup - Smarter Voicemail</title>
+		<link href="../assets/css/override.css" rel="stylesheet"/>
 		<link href="../assets/css/app.css" rel="stylesheet"/>
 	</head>
 	<body>
-		<h1>Signup</h1>
-		<form>
-			<input type="email" placeholder="someone@example.com"/>
-			<input type="password" placeholder="Enter a password"/>
-			<input type="text" placeholder="Your name"/>
-			<input type="submit" value="Signup"/>
-		</form>
-		<p>I already have an account, take me to the <a href="login.html">login page<a/></p>
+		<section>
+			<h1>Signup</h1>
+			<form>
+				<input type="email" placeholder="someone@example.com"/>
+				<input type="password" placeholder="Enter a password"/>
+				<input type="text" placeholder="Your name"/>
+				<input type="submit" value="Signup"/>
+			</form>
+			<p>I already have an account, take me to the <a href="login.html">login page<a/></p>
+		</section>
 		<script src="../assets/javascripts/app.js"></script>
 	</body>
 </html>
