--- a/static/templates/home.html
+++ b/static/templates/home.html
@@ -15,8 +15,8 @@
 				<li>Benefit number 4</li>
 				<li>Benefit number 5</li>
 			</ul>
-			<button>Signup</button>
-			<button>Login</button>
+			<a class="button" href="signup.html">Signup</a>
+			<a class="button" href="login.html">Login</a>
 		</section>
 		<script src="assets/javascripts/main.js"></script>
 	</body>
