--- a/static/templates/login.html
+++ b/static/templates/login.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Login - Smarter Voicemail</title>
+		<link href="../assets/css/override.css" rel="stylesheet"/>
 		<link href="../assets/css/app.css" rel="stylesheet"/>
 	</head>
 	<body>
@@ -13,7 +14,7 @@
 				<input type="submit" value="Login"/>
 			</form>
 			<p>Opps, I don's have an account, take me to the <a href="signup.html">signup page<a/></p>
-			<script src="../assets/javascripts/app.js"></script>
 		</section>
+		<script src="../assets/javascripts/app.js"></script>
 	</body>
 </html>
