Added shared _links template for user sign in/sign out stuff

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
 <h1>Adaptive Voicemail</h1>
 <p>Control your phoneability!</p>
 
-<%= link_to "Sign up", new_user_registration_path %> | <%= link_to "Sign in", new_user_session_path %>
+<%= render :partial => "users/shared/links" %>
