Added email message for new voicemail

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -2,5 +2,8 @@
 <p>Find me in app/views/dashboard/index.html.erb</p>
 
 <p>Your twilio number: <%= current_user.twilio_number %></p>
+<p>Your email address: <%= current_user.email %></p>
+
+<p>It's as simple as that.  Blah blah blah.</p>
 
 <%= render "users/shared/links" %>
