--- a/static/templates/home.html
+++ b/static/templates/home.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Smarter Voicemail</title>
+		<meta charset="utf-8">
+		<title>AppName</title>
+		<link href="../assets/css/font-awesome.css" rel="stylesheet">
 		<link href="../assets/css/override.css" rel="stylesheet"/>
 		<link href="../assets/css/app.css" rel="stylesheet"/>
 	</head>
 	<body>
-		<section>
-			<h1>Welcome to smarter voicemail</h1>
+		<header>
+			<span><i class="icon-volume-up"></i>AppName</span>
 			<ul>
-				<li>Benefit number 1</li>
-				<li>Benefit number 2</li>
-				<li>Benefit number 3</li>
-				<li>Benefit number 4</li>
-				<li>Benefit number 5</li>
+				<li><a href="#">Login</a></li>
+				<li><a href="#">Signup</a></li>
 			</ul>
-			<button>Signup</button>
-			<button>Login</button>
+		</header>
+		<section>
+			<h1>Voicemail by Email. Simple.</h1>
+			<ul class="benefits">
+				<li><i class="icon-phone"></i>You receive a voicemail.</li>
+				<li><i class="icon-magic"></i>We transcribe it.</li>
+				<li><i class="icon-inbox"></i>We send it to your inbox.</li>
+			</ul>
+			<p>See, we said it was simple.</p>
+			<ul class="options">
+				<li><a href="signup.html" class="button">Sign up to start making voicemail simpler</a></li>
+				<li><a href="login.html">Already got an account? Login</a></li>
+			</ul>
 		</section>
 		<script src="assets/javascripts/main.js"></script>
 	</body>
