--- a/static/assets/css/app.css
+++ b/static/assets/css/app.css
@@ -1,65 +1,195 @@
-body {
+body,
+.button,
+input[type=email],
+input[type=text],
+input[type=password] {
 	color: #303030;
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-size: 16px;
 	line-height: 100%;
 }
 
-body > section {
-	padding: 20px;
-	margin: auto;
-	text-align: center;
-}
-
 /* Links */
 
 	a {
-
+		color: #6776d2;
+		border-bottom: 1px dotted #6776d2;
+		text-decoration: none;
 	}
 	
 /* Buttons */
 
-		button {
-			border: none;
-			background: #6776d2;
-			color: #fff;
-			font-size: 20px;
-			font-weight: 300;
-			border-radius: 3px;
-			padding: 10px 15px;
-			cursor: pointer;
-		}
-		
-		button:hover,
-		button:focus {
-				background: #303030;
-		}
+	.button {
+		border: none;
+		background: #6776d2;
+		color: #fff;
+		font-size: 25px;
+		line-height: 35px;
+		font-weight: 300;
+		border-radius: 3px;
+		padding: 15px 20px;
+		cursor: pointer;
+		text-decoration: none;
+		margin: 0;
+	}
+	
+	.button:hover,
+	.button:focus {
+			background: #303030;
+	}
 
-/* Headings */
+/* Headings & Text */
 
 	h1 {
-		text-align: center;
-		font-size: 30px;
+		font-size: 40px;
 		line-height: 100%;
-		font-weight: 600;
+		font-weight: 300;
+		margin: 0 0 60px 0;
+		text-align: center;
+	}
+
+	h1.brand {
+		font-family: "Petit Formal Script";
+		font-size: 80px;
+	}
+
+	p {
+		font-size: 25px;
+		line-height: 35px;
+		font-weight: 300;
 		margin: 0 0 30px 0;
 	}
 
 /* Lists */
 
-	ul {
-		
+	ul.details {
+		color: #6776d2;
+		font-size: 25px;
+		line-height: 35px;
+		font-weight: 300;
+		padding: 30px 0;
+		margin: 0 0 30px 0;
+		border: 1px solid #c2c8ed;
+		border-radius: 3px;
+		box-shadow: 2px 2px 0 #eff1fa;		
+	}
+	
+	ul.details i {
+		color: #c2c8ed;
 	}
 
-	ul li {
-		list-style: disc;
-		margin: 10px 0 0 0;
-		padding: 0 0 0 20px;
+	ul.details li:first-child {
+		padding-bottom: 30px;
+		margin-bottom: 30px;
+		border-bottom: 1px solid #c2c8ed;
 	}
 
-/* Lists */
+	ul.benefits {
+		margin: 0 auto 60px auto;
+		width: 380px;
+	}
+	
+	ul.benefits li {
+		font-size: 25px;
+		line-height: 35px;
+		font-weight: 300;
+		margin: 0 0 30px 0;
+		text-align: left;
+	}
 
+	ul.benefits li i {
+		font-size: 50px;
+		line-height: 50px;
+		color: #6776d2;
+		vertical-align: middle;
+		margin: 0 30px 0 0;
+	}
+
+	ul.options li {
+		margin: 0 0 30px 0;
+		list-style: none;
+	}
+	
+	ul.options li a {
+		display: block;
+		text-align: center;
+		font-size: 20px;
+		border: none;
+	}
+
+/* Form */
+
+	form input[type=email],
 	form input[type=text],
-	form input[type=password] {
-		border: ;
+	form input[type=password],
+	form input[type=submit] {
+		display: block;
+		width: 100%;
+		border: 1px solid #c2c8ed;
+		padding: 10px 15px;
+		margin: 0 0 20px 0;
+		border-radius: 3px;
+		box-shadow: 2px 2px 0 #eff1fa;
+	}
+	
+	form input[type=email]:focus,
+	form input[type=text]:focus,
+	form input[type=password]:focus {
+		outline: none;
+		box-shadow: 0 0 10px #c2c8ed;
+	}
+	
+	form input[type=submit] {
+		border: none;
+		box-shadow: none;
+		padding: 15px 20px;
+		font-size: 25px;
+		line-height: 35px;
+		font-weight: 300;
+	}
+	
+	form input[type=submit]:focus {
+		outline: none;
+	}
+
+/* Sections */
+
+	body > header {
+		overflow: hidden;
+		padding: 20px;
+	}
+
+	body > header span {
+		float: left;
+		font-weight: 300;
+		text-transform: uppercase;
+		background: #303030;
+		color: #fff;
+		padding: 5px 5px 5px 10px;
+		border-radius: 3px;
+		letter-spacing: 10px;
+	}
+
+	body > header ul {
+		float: right;
+	}
+	
+	body > header ul li {
+		display: inline-block;
+		margin: 0 0 0 10px;
+		font-size: 14px;
+	}
+	
+	body > header ul li a {
+		font-weight: 300;
+		text-transform: uppercase;
+		padding: 5px;
+		border: none;
+	}
+
+	body > section {
+		margin: auto;
+		padding: 60px 30px;
+		max-width: 800px;
+		text-align: center;
 	}
