--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,24 +1,23 @@
-<h2>Sign up</h2>
+<section>
+	<h2>Sign up</h2>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+	<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+	  <%= devise_error_messages! %>
 
-  <div><%= f.label :name %><br />
-  <%= f.text_field :name %></div>
-  
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
+	  <%= f.text_field :name, :html => { :placeholder_attribute => "First name" } %>
+	  
+	  <%= f.email_field :email, :html => { :placeholder_attribute => "Email" } %>
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+	  <%= f.password_field :password, :html => { :placeholder_attribute => "Password" } %>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
-  
-  <div><%= f.label :marketing_opt_in, "Click here to be spammed relentlessly:" %><br />
-  <%= f.check_box :marketing_opt_in %></div>
+	  <%= f.password_field :password_confirmation, :html => { :placeholder_attribute => "Confirm your password" } %>
+	  
+	  <%= f.check_box :marketing_opt_in %>
 
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
+	  <%= f.label :marketing_opt_in, "Let me know when you add new features (no marketing fluff - honest)" %>
 
-<%= render "devise/shared/links" %>
+	  <%= f.submit "Sign up", :class => "button" %>
+	<% end %>
+
+	<%= link_to "Login", new_user_session_path, :class => "button" %>
+</section>
