--- a/static/templates/home.html
+++ b/static/templates/home.html
@@ -15,6 +15,7 @@
 				<li>Benefit number 4</li>
 				<li>Benefit number 5</li>
 			</ul>
+			<p>Signup is free and takes 90 seconds</p> 
 			<a class="button" href="signup.html">Signup</a>
 			<a class="button" href="login.html">Login</a>
 		</section>
