--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,8 @@
 <head>
   <title>AdaptiveTwilio</title>
   <meta charset="utf-8"/>
+  <%= stylesheet_link_tag    "override", :media => "all" %>
+  <%= stylesheet_link_tag    "font-awesome", :media => "all" %>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
