--- a/app/assets/stylesheets/font-awesome.css.erb
+++ b/app/assets/stylesheets/font-awesome.css.erb
@@ -24,7 +24,10 @@
 @font-face {
   font-family: "FontAwesome";
   src: url('../font/fontawesome-webfont.eot');
-  src: url('../font/fontawesome-webfont.eot?#iefix') format('eot'), url('../font/fontawesome-webfont.woff') format('woff'), url('../font/fontawesome-webfont.ttf') format('truetype'), url('../font/fontawesome-webfont.svg#FontAwesome') format('svg');
+  src: url('../font/fontawesome-webfont.eot?#iefix') format('eot'), 
+  	   url(<%= asset_path "images/font/fontawesome-webfont.woff" %>) format('woff'), 
+	   url('../font/fontawesome-webfont.ttf') format('truetype'), 
+	   url('../font/fontawesome-webfont.svg#FontAwesome') format('svg');
   font-weight: normal;
   font-style: normal;
 }
