--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,6 +9,8 @@
 	  
 	  <div><%= f.label :email %><br />
 	  <%= f.email_field :email %></div>
+	  
+	  <%= f.text_field :phone_number, :placeholder => "Your phone number (e.g. 442071234567)"  %>
 
 	  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
 	  <%= f.password_field :password, :autocomplete => "off" %></div>
