--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,6 +15,8 @@
 	  
 	  <%= f.email_field :email, :placeholder => "Email"  %>
 
+	  <%= f.text_field :phone_number, :placeholder => "Your phone number (e.g. 442071234567)"  %>
+	  
 	  <%= f.password_field :password, :placeholder => "Password" %>
 
 	  <%= f.password_field :password_confirmation, :placeholder => "Confirm your password" %>
